Added AR1-GMM intercept initial-guess
Warning: AR1-GMM initial guess is not optimal for group-FEs.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports: 
     data.table,
-    fixest
+    fixest,
+    pso
 Suggests: 
     knitr,
     rmarkdown,
